Dragging Progress bar on mobile screen fix

--- a/player.css
+++ b/player.css
@@ -268,6 +268,7 @@ svg.hide
     background: #f0f0f063;
     transition: all 200ms ease-in-out;
     cursor: pointer;
+    touch-action: none;
 }
 
 .progress-area .progress-bar
